--- a/Client/src/Content/Landing/Home/landing.css
+++ b/Client/src/Content/Landing/Home/landing.css
@@ -1,3 +1,5 @@
+@import url(../../../Effects/pulsing.css);
+
 
 #home h1,
 #home h2 {
@@ -26,15 +28,3 @@
     }
 }
 
-@keyframes shadow-pulse {
-    0% {
-        box-shadow: 0 0 5px 2px #161D6F,
-                    0 0 8px 2px #98DED9,
-                    0 0 10px 2px #C7FFD8;
-    }
-    100% {
-        box-shadow: 0 0 5px 10px #161D6F,
-                    0 0 8px 35px #98DED9,
-                    0 0 10px 50px #C7FFD8;
-    }
-}
