Nav Pop-out problem
I need to fix a way how to fix the problem when it gets to the top or bot it continues to count.

--- a/HomePage/index.css
+++ b/HomePage/index.css
@@ -139,7 +139,7 @@ nav ol {
     height: 500px;
     padding: 10% 0;
     
-    scroll-behavior: smooth;
+    /* scroll-behavior: smooth; Fix the glitching if i want to add */ 
 
     overflow-y: scroll;
 }
